fixed popup spacing

--- a/src/components/AddFavoriteWordPage/AddFavoriteWordPage.css
+++ b/src/components/AddFavoriteWordPage/AddFavoriteWordPage.css
@@ -33,7 +33,7 @@
   position: absolute;
   padding: 20px !important;
   height: 15px;
-  margin: 86px 10px 10px 0px !important;
+  margin: 108px 10px 10px 0px !important;
   bottom: initial !important;
   line-height: 0px !important;
   color: #fff !important;
@@ -48,7 +48,7 @@
   position: absolute;
   padding: 20px !important;
   height: 15px;
-  margin: 86px 10px 10px 0px !important;
+  margin: 108px 10px 10px 0px !important;
   bottom: initial !important;
   line-height: 0px !important;
   color: #fff !important;
